<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FragmentLogin">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="150dp"
        android:text="@string/name_login_acc"
        android:textColor="@color/black"

        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/link_register_from_login"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email"
        android:layout_width="320dp"
        android:layout_height="50dp"


        android:layout_marginTop="40dp"
        android:background="@drawable/border_corner"
        android:hint="@string/email_text"
        android:paddingStart="20dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_register" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        android:clickable="true"
        android:focusable="true"
        android:text="@string/link_forgot_password"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatEditText"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/appCompatEditText"
        android:layout_width="320dp"
        android:layout_height="50dp"

        android:layout_marginTop="15dp"
        android:background="@drawable/border_corner"
        android:hint="@string/password_text"
        android:paddingStart="20dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/border_corner"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>