<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="100dp"
        android:text="@string/name_register_acc"
        android:textColor="@color/black"

        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_account"
        android:layout_width="320dp"
        android:layout_height="50dp"

        android:background="@drawable/border_corner"
        android:hint="@string/username_register"
        android:paddingStart="20dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"

        android:textColorHint="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_register"
        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email_register"
        android:layout_width="320dp"
        android:layout_height="50dp"

        android:layout_marginTop="15dp"
        android:background="@drawable/border_corner"
        android:hint="@string/email_text"
        android:paddingStart="20dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"

        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_account"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_password_register"
        android:layout_width="320dp"
        android:layout_height="50dp"

        android:layout_marginTop="15dp"
        android:background="@drawable/border_corner"
        android:hint="@string/password_text"
        android:paddingStart="20dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_register"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_passwordrepeat_register"
        android:layout_width="320dp"

        android:layout_marginTop="15dp"
        android:background="@drawable/border_corner"
        android:hint="@string/repeatpassword_text"
        android:paddingStart="20dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/black"

        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password_register"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_corner"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_passwordrepeat_register" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:text="@string/have_account"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />
</androidx.constraintlayout.widget.ConstraintLayout>