<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".views.FragmentAddEditCustomer">


<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id="@+id/name_customer_add_title"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/name_customer_add"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/name_customer_add"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_customer"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/purple"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_customer_add"
        android:layout_below="@+id/toolbar_customer"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:src="@drawable/cusotmer" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_customer_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/image_customer"
        android:hint="@string/title_name"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/white"
        tools:ignore="TouchTargetSizeCheck"
        android:layout_below="@+id/toolbar_customer"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/image_phone"
        android:layout_below="@+id/image_customer"
        android:layout_alignBottom = "@+id/email_customer_add"
        android:layout_marginStart="10dp"
        android:src="@drawable/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_customer_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_customer_add"
        android:gravity="start|top"
        android:hint="@string/email_text"
        android:layout_toEndOf="@+id/image_email"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_customer_add"
        android:layout_alignBottom="@+id/phone_customer_add"
        android:layout_marginStart="10dp"
        android:src="@drawable/phone_number" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone_customer_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_customer_add"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:hint="@string/title_phone"
        android:layout_toEndOf="@+id/image_phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/notes_customer_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_customer_add"
        android:layout_above="@+id/button_customer_add"
        android:gravity="start|top"
        android:hint="@string/title_notes"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_customer_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_customer_button"
        android:textColor="@color/white"
        android:background="@color/black_purple"
        android:textSize="15sp" />

</RelativeLayout>